Make final changes to fix the shitty raycasting in some cases on ios

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,23 +1,25 @@
 @import "variables.css";
 @import "font-face-rules.css";
 
-html {
+html,
+body {
   height: 100%;
+  width: 100%;
+  overflow: hidden;
+  background: black;
 }
 
 body {
   font-family: var(--typography-font-family-primary);
-  height: 100%;
-  /* height: 100vh; */
   margin: 0;
   overflow: hidden;
-  width: 100vw;
 }
 
 #scene-container {
+  position: absolute;
   height: 100%;
   width: 100%;
-  touch-action: none;
+  overflow: hidden;
 }
 
 .ui-elements {
